multi: add option to toggle between autoloop out and in on rpc
